--- a/AFBitmaskDR/AFBitmaskDR.csproj
+++ b/AFBitmaskDR/AFBitmaskDR.csproj
@@ -65,6 +65,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="BitmaskDRConfig.resx">
+      <DependentUpon>BitmaskDRConfig.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
